--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "react-dom": "16.8.6",
     "react-json-view": "latest",
     "react-jsonschema-form": "1.5.0",
-    "react-redux": "7.0.3",
+    "react-redux": "^7.0.3",
     "react-router-dom": "5.0.0",
+    "react-scripts": "^3.0.1",
     "react-styleguidist": "^9.1.11",
-    "redux": "4.0.1",
+    "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
