--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-scripts": "^3.0.1",
     "react-styleguidist": "^9.1.11",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
