--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-app-polyfill": "^1.0.0",
     "react-dev-utils": "^9.0.0",
     "react-dom": "16.8.6",
-    "react-json-view": "latest",
+    "react-json-view": "^1.19.1",
     "react-jsonschema-form": "1.5.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "5.0.0",
